<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/hearingTestString"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/onHeadphones"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/onHeadphones"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/onMaxVolume"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/onMaxVolume"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onHeadphones" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/keepQuiet"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxIndNorm" />

    <Button
        android:id="@+id/startTesting"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/startTesting"
        android:textSize="18sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45" />

    <CheckBox
        android:id="@+id/checkBoxIndNorm"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/individualNormCheckBox"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onMaxVolume" />

    <Button
        android:id="@+id/startTestingAdvanced"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/startAdvancedTesting"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startTesting"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>